--- a/ProductosElectronicos/ProductosElectronicos.csproj
+++ b/ProductosElectronicos/ProductosElectronicos.csproj
@@ -46,18 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="..\..\..\..\OneDrive\Tareas\Evento evaluativo práctico.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="..\..\..\..\OneDrive\Tareas\Evento evaluativo práctico.Designer.cs">
+      <DependentUpon>Evento evaluativo práctico.cs</DependentUpon>
     </Compile>
     <Compile Include="Inventario.cs" />
     <Compile Include="ProductoElectronico.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="..\..\..\..\OneDrive\Tareas\Evento evaluativo práctico.resx">
+      <DependentUpon>Evento evaluativo práctico.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
